{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 35,
  "lineage": "e52773a7-f906-0bdb-2e87-0ebecb6b6530",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "instance_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0861fefb506fa1d47",
            "domain": "vpc",
            "id": "eipalloc-0bd862f81c747e66c",
            "instance": "i-070a8bce351874a6c",
            "network_interface": "eni-03ee8b0cfafb7866e",
            "private_dns": "ip-172-31-27-177.sa-east-1.compute.internal",
            "private_ip": "172.31.27.177",
            "public_dns": "ec2-18-229-94-229.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.229.94.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.instacia_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instacia_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c8813f1ea04d4ab",
            "arn": "arn:aws:ec2:sa-east-1:767167112715:instance/i-070a8bce351874a6c",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-070a8bce351874a6c",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-test-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-03ee8b0cfafb7866e",
            "private_dns": "ip-172-31-27-177.sa-east-1.compute.internal",
            "private_ip": "172.31.27.177",
            "public_dns": "ec2-18-229-94-229.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.229.94.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b59a8f4852968a21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_anywhere"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1a993541",
            "tags": {
              "Environment": "Develop",
              "Name": "practica3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04e1231a842127026",
              "sg-059f3505e45d53f25"
            ]
          },
          "depends_on": [
            "aws_key_pair.keypair",
            "aws_security_group.allow_http_anywhere",
            "aws_security_group.allow_ssh_anywhere"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_anywhere",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:767167112715:security-group/sg-059f3505e45d53f25",
            "description": "Allow all inbound traffic to http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059f3505e45d53f25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_anywhere",
            "name_prefix": null,
            "owner_id": "767167112715",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-e0615587"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_anywhere",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:767167112715:security-group/sg-04e1231a842127026",
            "description": "Allow all inbound traffic to ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e1231a842127026",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_anywhere",
            "name_prefix": null,
            "owner_id": "767167112715",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-e0615587"
          }
        }
      ]
    }
  ]
}